Combining two backports because the second has a test fix for the first.

SERVER-33078 convertToCapped size is not checked for float -> long long overflow

(cherry picked from commit f527188c4dab4bf2a3ce0e31406dbd121c3a90ca)

SERVER-35410 add incompatible_with_embedded tag to convert_to_capped.js

(cherry picked from commit 5377292873f5b203c401384567457b2987502528)