src/mongo/db/catalog/capped_utils.cpp
@@ -113,7 +113,7 @@ mongo::Status mongo::cloneCollectionAsCapped(OperationContext* opCtx,
                                              Database* db,
                                              const std::string& shortFrom,
                                              const std::string& shortTo,
-                                             double size,
+                                             long long size,
                                              bool temp) {
     NamespaceString fromNss(db->name(), shortFrom);
     NamespaceString toNss(db->name(), shortTo);
@@ -251,7 +251,7 @@ mongo::Status mongo::cloneCollectionAsCapped(OperationContext* opCtx,
 
 mongo::Status mongo::convertToCapped(OperationContext* opCtx,
                                      const NamespaceString& collectionName,
-                                     double size) {
+                                     long long size) {
     StringData dbname = collectionName.db();
     StringData shortSource = collectionName.coll();
 
