src/mongo/db/commands/collection_to_capped.cpp
@@ -171,7 +171,7 @@ public:
                    string& errmsg,
                    BSONObjBuilder& result) {
         const NamespaceString nss(CommandHelpers::parseNsCollectionRequired(dbname, jsobj));
-        double size = jsobj.getField("size").number();
+        long long size = jsobj.getField("size").safeNumberLong();
 
         if (size == 0) {
             errmsg = "invalid command spec";
